# buho_back

./: .gitignore  Dockerfile  README.md  chroma.py  cloudbuild.yaml  main.py  pyproject.toml  services.py
app/: config.json  config.py  main.py  models.py  utils.py
app/routers/: chat.py  files.py  qa_tracker.py
app/services/: answer.py  chains.py  context.py  preprocessing.py  retriever.py  storage.py
buho_back/: config.json  config.py  main.py  models.py  utils.py
buho_back/instructions/: information_memorandum.json  marketing_strip.json
buho_back/routers/: chat.py  dashboard_data.py  deals.py  files.py  input_files.py  output_files.py  qa_tracker.py
buho_back/services/: answer.py  context.py  file_generation.py  preprocessing.py  retriever.py  storage.py
buho_back/services/file_generation/: doc.py  file_generation.py  ppt.py  xlsx.py
buho_back/services/file_generation/instructions/: credit_report.json  discounted_cash_flow.json  discounted_cash_flow.txt
buho_back/services/file_generation/templates/: dcf.xlsx  discounted_cash_flow.xlsx  powerpoint.pptx
buho_back/services/storage/: file_management.py  vectordb.py
buho_back/templates/: credit_report.json  information_memorandum.json  powerpoint.pptx
mychroma_db/b84d7a98-02e0-453d-978c-10afaa9a87b0/: index_metadata.pickle
tests/: genai_quality_log.csv  questions_answers_for_test.json  test_chat.py  test_genai_quality.ipynb  test_input_files.py  test_output_files.py  test_qa_tracker.py
