[tool.poetry]
name = "buho_back"
version = "0.1.0"
description = ""
authors = ["Arthur Mello <arthur.bmello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
openai = "^1.16.2"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
docx2txt = "^0.8"
pypdf = "^4.1.0"
tiktoken = "^0.6.0"
python-multipart = "^0.0.9"
chromadb = "0.5.4"
pydantic-settings = "^2.3.2"
unstructured = "^0.6.7"
markdown-pdf = "^1.3"
pdf2docx = "^0.5.8"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
protobuf = "^3.20"
tabulate = "^0.9.0"
pdf2image = "^1.17.0"
python-docx = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
